--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,8 @@
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <div id="input"></div>
+    <div id="initial"></div>
+    <div id="encoded"></div>
+    <div id="recreated"></div>
   </body>
 </html>
