--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
+    <select id="transformName"></select>
     <div id="initial"></div>
     <div id="encoded"></div>
     <div id="recreated"></div>
