--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
+    <h1>Initial Image</h1>
+    <img id="initialImg" src="./test-data/bevo.jpeg" />
+    <canvas id="initialCanvas"></canvas>
+    <h1>Final Image</h1>
+    <canvas id="finalCanvas"></canvas>
+    <h1>One Single Square</h1>
     <select id="transformName"></select>
     <div id="initial"></div>
     <div id="encoded"></div>
